--- a/src/side-panel.html
+++ b/src/side-panel.html
@@ -56,7 +56,10 @@
 					<div id="vault-container" style="display: none;">
 						<select id="vault-select"></select>
 					</div>
-					<input id="path-name-field" type="text" data-i18n="folder"/>
+					<div id="path-container" style="display: flex; gap: 8px; flex: 1;">
+						<select id="path-select" style="display: none;"></select>
+						<input id="path-name-field" type="text" data-i18n="folder"/>
+					</div>
 				</div>
 				<div id="interpreter" style="display: none;">
 					<textarea id="prompt-context" rows="3"></textarea>
